Fixed display on premium hours, name fix on profile

--- a/todo.txt
+++ b/todo.txt
@@ -7,9 +7,10 @@
 [] Find a way to increase CPS
 [X] Premium users can set a colour for all their embeds
 [X] Store timestamp for when they first did =start
-[] new command to give people premium_coins
-[] new command to add a persons donation
+[X] new command to give people premium_coins
+[X] new command to add a persons donation
 [] Titles (?) [ Need title name ideas ]
+[X] Display users level next to their name on Official DiscordLove server
 
 [ Reputation ]
 [X] Can give reputation
@@ -24,7 +25,7 @@
 
 [ Timestamps ]
 [] Timestamp for how often you can show your profile
-[] Timestamp for how often you can give reputation
+[X] Timestamp for how often you can give reputation
 [] Timestamp for how often you can fish
 [] Timestamp for how often it updates your message counter
 [] Timestamp for how often it updates your command counter
