Fishing timer reduced to 3 minutes (temp) and now announces failed fish

--- a/todo.txt
+++ b/todo.txt
@@ -58,7 +58,7 @@
 [X] Fishing Experience and Levels
 [] =mine
 [X] =mine inv
-[] =mine history
+[X] =mine history
 [] =mine help
 [] =mine sell [ help command ]
 [] =mine sell <options>
